crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_code_multi_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..13,
                codes: [
                    RuleIdent {
                        identifier: Code(
                            "F401",
                        ),
                        range: 9..13,
                    },
                ],
            },
        ),
    ),
)
