crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_codes_leading_comment.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            Codes {
                range: 35..53,
                codes: [
                    RuleIdent {
                        identifier: Code(
                            "F401",
                        ),
                        range: 43..47,
                    },
                    RuleIdent {
                        identifier: Code(
                            "F841",
                        ),
                        range: 49..53,
                    },
                ],
            },
        ),
    ),
)
