crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_codes_no_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..15,
                codes: [
                    RuleIdent {
                        identifier: Code(
                            "F401",
                        ),
                        range: 6..10,
                    },
                    RuleIdent {
                        identifier: Code(
                            "F841",
                        ),
                        range: 11..15,
                    },
                ],
            },
        ),
    ),
)
