crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_leading_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            Codes {
                range: 4..16,
                codes: [
                    RuleIdent {
                        identifier: Code(
                            "F401",
                        ),
                        range: 12..16,
                    },
                ],
            },
        ),
    ),
)
