crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_name.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
snapshot_kind: text
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..21,
                codes: [
                    RuleIdent {
                        identifier: Name(
                            "unused-import",
                        ),
                        range: 8..21,
                    },
                ],
            },
        ),
    ),
)
